# masters-thesis-work

./: .gitignore  cpsCore.whole_work-workspace.code-workspace
MSc_SE_Master_Thesis___Prathik_at_TNO/: ARCHITECTURE.md  H1_H2_H3_explanation.md  README.md  Thesis_Defence_Prathik_NEW.pptx  acronyms.tex  build_defence_slides.py  latexmkrc.local  main.tex  mscthesis.cls  references.bib  scenario-diagrams.md
MSc_SE_Master_Thesis___Prathik_at_TNO/H2 ratings/: rating_form_completed (2).md  rating_form_completed (3).md  rating_form_completed-4.md  rating_form_completed.md  rating_form_completed_5.md  rating_form_completed_6.md  rating_form_completed_pierre.md
MSc_SE_Master_Thesis___Prathik_at_TNO/appendix/: appendix.tex  appendix_v1.tex  showcase.tex
MSc_SE_Master_Thesis___Prathik_at_TNO/chapters/: README.md  appendix.tex  background.tex  conclusion.tex  conclusion_v1.tex  cpp-macro.tex  evaluation.tex  evaluation_v1.tex  experiments.tex  experiments_v1.tex  introduction.tex  introduction_v1.tex  methods.tex  methods_v1.tex  references.bib  related_work.tex
MSc_SE_Master_Thesis___Prathik_at_TNO/figures/: function-call-dependencies.mmd  module-dependency.mmd  s1-sequence.mmd  s1-structural.mmd  s2-sequence.mmd  s3-sequence.mmd  s3-structural.mmd  (+3 more)
cpsCore/: .gitignore  AGENTS.md  CMakeLists.txt  README.md  Views.sysml  chat_used.md  chat_used.txt  cypher_query.txt  graph_schema.txt  interface_dependency_table.csv  neo4j_queries.csv  runtime_traces_hybrid.txt  sequence_dependency_table.csv  sysml_corrected.sysml  sysml_structural_model.sysml  tatus  thesis_edits.md
ppts/: Pipeline_Walkthrough.pptx  TNO_project_final_v3.pptx  TNO_project_proposal.pptx  TNO_project_proposal_BEFORE_PIPELINE_SLIDES.pptx  TNO_project_proposal_BEFORE_REFERENCES.pptx  TNO_project_proposal_BEFORE_SCALE_SLIDE.pptx  TNO_project_proposal_ORIGINAL_BACKUP.pptx  Thesis_Defence_Prathik.pptx  Thesis_Defence_Prathik_NEW.pptx  Thesis_Defence_Prathik_NEW_EDITED.pptx  Thesis_Defence_Prathik_NEW_ORIGINAL_BACKUP.pptx
renaissance_clang/: .gitignore  CMakeLists.txt  README.md  setup.ps1
renaissance_clang/.github/instructions/: cpscore-build.instructions.md
renaissance_clang/.github/prompts/: cpscore_tracing.prompt.md
renaissance_clang/docs/: call_graph.md
renaissance_clang/examples/cpscore_tracing/: add_tracing.txt  apply_tracing.ps1  csp_trace.h  remove_tracing.ps1  remove_tracing.txt  tracing_filters.cpp  tracing_spec.csv
renaissance_clang/src/: main.cpp
renaissance_clang/tests/: csp_suite_report.md  find_fixture.cpp  run_csp_suite.ps1  sample_filters.cpp
(+401 files in other folders)
